fix(checkout): CHECKOUT-7047 Unable to scroll Cart Summary on Mobile

--- a/packages/core/src/scss/components/foundation/modal/_modal.scss
+++ b/packages/core/src/scss/components/foundation/modal/_modal.scss
@@ -40,9 +40,6 @@
         &.is-active,
         &.modal--afterOpen {
             bottom: 2%;
-            display: flex;
-            flex-direction: column;
-            justify-content: end;
             left: 2%;
             max-width: 96%;
             min-height: 96vh;
@@ -169,4 +166,38 @@
 .modal--afterOpen {
     display: block;
     visibility: visible;
+}
+
+// Specific styles for displaying cart summary on mobile
+body.has-activeModal {
+    overflow: auto;
+
+    #checkout-app,
+    .checkoutHeader.optimizedCheckout-header {
+        display: none;
+
+        @include breakpoint("small") {
+            display: block;
+        }
+    }
+
+    .modalOverlay {
+        margin-top: spacing("base");
+        position: static;
+
+        @include breakpoint("small") {
+            margin-top: 0;
+            position: fixed;
+        }
+
+        .modal {
+            max-height: fit-content;
+            position: absolute;
+
+            @include breakpoint("small") {
+                max-height: 80%;
+                position: fixed;
+            }
+        }
+    }
 }
